# bril

./: .gitignore
assignments/: .gitignore  brench.toml  pyproject.toml
assignments/src/assignments/: cfg.py  cfg_dot.py  dataflow.py  dce.py  dominance.py  lvn.py
assignments/src/assignments/dce/: dce.py
assignments/test/lvn/: clobber-arg.bril  clobber-arg.out  const-types.bril  const-types.out  fold-comparisons.bril  fold-comparisons.out  idchain-nonlocal.bril  idchain-nonlocal.out  idchain-prop.bril  logical-operators.bril  logical-operators.out  nonlocal-clobber.bril  nonlocal-clobber.out  reassign.out  rename-fold.out  turnt.toml
assignments/test/tdce/: turnt.toml
